Revision history for DBIx-Class-Migration.

0.062   
        - update DBIx::Class::DeploymentHandler dep to 0.002222 - thanks @KES777 for report
        - POD improvements - thanks @manwar

0.061   2019-02-25
        - POD improvements - thanks @n7st and @willsheppard
        - make the tests work running in parallel
        - Ignore Views when running 'prepare' - thanks @mulletboy2
        - say valid possibilities if --database= invalid

0.060   2017-10-17
        - fixed VERSION mistake in previous release

0.059   2017-10-17
        - Merged in some PRs around typos
        - Merged PR to convert to Test::Postgresql58
        - Use modern versions of dependencies
        
0.058   2016-01-07
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/61 (doc update)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/64 (find local perl install better)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/53 (use JSON module with more reliable author)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/57 (quote table names better)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/56 (properly delete stuff)
        - https://github.com/jjn1056/DBIx-Class-Migration/pull/68 (work properly on newer Perl)
        - Thanks for all the PRs, sorry I was slow to pick this up :(

0.057   2015-03-24
        - Lowered some dependency versions to solve reported installation
          issues (Some stuff is not 'dual lived' and only gets updated with
          a newer Perl version).

0.056   2015-02-06
        - tweaked the dist.ini so that '.devdir' is found and gathered into
          the tarball.  This solves massive fail on cpantesters.

0.055   2015-02-05
        - Specify higher minimum versions to try and narrow down massive
          failure reports on CPAN testers.  Please give me a shout if any
          of these version minimum increases cause you trouble.

0.054   2015-02-05