@@ -46,6 +46,7 @@ version = 0.9912
 SQL::Translator = 0.11021
 Text::Brew = 0.02
 Module::Find = 0.13
+Log::Any = 1.707
 
 [Prereqs / TestRequires]
 Test::Most = 0.34
