@@ -3,6 +3,7 @@ Revision history for DBIx-Class-Migration.
 0.062   
         - update DBIx::Class::DeploymentHandler dep to 0.002222 - thanks @KES777 for report
         - POD improvements - thanks @manwar
+        - use Log::Any for errors - thanks @upasana-me
 
 0.061   2019-02-25
         - POD improvements - thanks @n7st and @willsheppard
